--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@formily/react": "^2.2.14"
   },
   "publishConfig": {
-    "access":"public",
-    "registry": "https://www.npmjs.com/"
+    "access":"public"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
