--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
-# registry=https://registry.npmmirror.com/
+#registry=https://registry.npmmirror.com/
 # auto-install-peers=true
+registry=https://registry.npmjs.com/
+strict-peer-dependencies=false
