--- a/formily/antd/package.json
+++ b/formily/antd/package.json
@@ -21,7 +21,7 @@
     "preview:playground": "vite preview --host --config playground/vite.config.ts"
   },
   "devDependencies": {
-    "@edan/designable-react-settings-form": "workspace:0.0.1",
+    "@edan/designable-react-settings-form": "0.0.0",
     "@formily/antd": "3.0.0-alpha.1",
     "@formily/core": "^2.2.14",
     "@formily/json-schema": "^2.2.14",
@@ -59,10 +59,10 @@
     "react-is": "^18.0.0"
   },
   "dependencies": {
-    "@edan/designable-core": "workspace:0.0.1",
-    "@edan/designable-formily-setters": "workspace:0.0.1",
-    "@edan/designable-formily-transformer": "workspace:0.0.1",
-    "@edan/designable-react": "workspace:0.0.1",
+    "@edan/designable-core": "0.0.0",
+    "@edan/designable-formily-setters": "0.0.0",
+    "@edan/designable-formily-transformer": "0.0.0",
+    "@edan/designable-react": "0.0.0",
     "antd": "^5.0.5",
     "classnames": "^2.3.2",
     "events": "^3.3.0",
@@ -74,6 +74,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "gitHead": "699def16484a8a8444c8a165ef0f3302a4cbeac0"
+  }
 }
