--- a/formily/setters/package.json
+++ b/formily/setters/package.json
@@ -45,11 +45,11 @@
     "react-is": "^18.0.0"
   },
   "dependencies": {
-    "@edan/designable-core": "workspace:0.0.1",
-    "@edan/designable-formily-transformer": "workspace:0.0.1",
-    "@edan/designable-react": "workspace:0.0.1",
-    "@edan/designable-react-settings-form": "workspace:0.0.1",
-    "@edan/designable-shared": "workspace:0.0.1",
+    "@edan/designable-core": "0.0.0",
+    "@edan/designable-formily-transformer": "0.0.0",
+    "@edan/designable-react": "0.0.0",
+    "@edan/designable-react-settings-form": "0.0.0",
+    "@edan/designable-shared": "0.0.0",
     "@formily/json-schema": "^2.2.14",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
@@ -60,6 +60,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "gitHead": "699def16484a8a8444c8a165ef0f3302a4cbeac0"
+  }
 }
