--- a/formily/transformer/package.json
+++ b/formily/transformer/package.json
@@ -29,10 +29,9 @@
     "@formily/json-schema": "^2.2.14"
   },
   "dependencies": {
-    "@edan/designable-core": "workspace:0.0.1",
-    "@edan/designable-shared": "workspace:0.0.1",
+    "@edan/designable-core": "0.0.0",
+    "@edan/designable-shared": "0.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4"
-  },
-  "gitHead": "699def16484a8a8444c8a165ef0f3302a4cbeac0"
+  }
 }
