--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,7 +27,7 @@
     "@formily/path": "^2.2.14"
   },
   "dependencies": {
-    "@edan/designable-shared": "workspace:0.0.1",
+    "@edan/designable-shared": "0.0.0",
     "@formily/reactive": "^2.2.14",
     "@juggle/resize-observer": "^3.4.0",
     "lodash": "^4.17.21",
@@ -35,6 +35,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "gitHead": "699def16484a8a8444c8a165ef0f3302a4cbeac0"
+  }
 }
