--- a/packages/react-sandbox/package.json
+++ b/packages/react-sandbox/package.json
@@ -23,8 +23,8 @@
     "react-dom": "^18.0.0"
   },
   "dependencies": {
-    "@edan/designable-react": "workspace:0.0.1",
-    "@edan/designable-shared": "workspace:0.0.1",
+    "@edan/designable-react": "0.0.0",
+    "@edan/designable-shared": "0.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -32,6 +32,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "gitHead": "699def16484a8a8444c8a165ef0f3302a4cbeac0"
+  }
 }
