--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -9,9 +9,9 @@
   },
   "module": "esm",
   "bugs": {
-    "url": "https://github.com/alibaba/designable/issues"
+    "url": "https://github.com/zhangrui2333/designable/issues"
   },
-  "homepage": "https://github.com/alibaba/designable#readme",
+  "homepage": "https://github.com/zhangrui2333/designable#readme",
   "scripts": {
     "build": "rimraf -rf lib esm dist && npm run build:cjs && npm run build:esm && npm run build:umd && ts-node copy",
     "build:cjs": "tsc --project tsconfig.build.json",
@@ -37,6 +37,10 @@
     "dateformat": "^4.6.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zhangrui2333/designable.git"
   },
   "publishConfig": {
     "access": "public"
