--- a/formily/setters/package.json
+++ b/formily/setters/package.json
@@ -6,9 +6,9 @@
   "module": "esm",
   "types": "esm/index.d.ts",
   "bugs": {
-    "url": "https://github.com/alibaba/designable/issues"
+    "url": "https://github.com/zhangrui2333/designable/issues"
   },
-  "homepage": "https://github.com/alibaba/designable#readme",
+  "homepage": "https://github.com/zhangrui2333/designable#readme",
   "engines": {
     "npm": ">=3.0.0"
   },
@@ -57,6 +57,10 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react-is": "^18.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zhangrui2333/designable.git"
   },
   "publishConfig": {
     "access": "public"
