--- a/packages/react-settings-form/package.json
+++ b/packages/react-settings-form/package.json
@@ -9,9 +9,9 @@
   },
   "module": "esm",
   "bugs": {
-    "url": "https://github.com/alibaba/designable/issues"
+    "url": "https://github.com/zhangrui2333/designable/issues"
   },
-  "homepage": "https://github.com/alibaba/designable#readme",
+  "homepage": "https://github.com/zhangrui2333/designable#readme",
   "scripts": {
     "build": "rimraf -rf lib esm dist && npm run build:cjs && npm run build:esm && npm run build:umd && ts-node copy",
     "build:cjs": "tsc --project tsconfig.build.json",
@@ -57,6 +57,10 @@
     "prettier": "^2.8.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zhangrui2333/designable.git"
   },
   "publishConfig": {
     "access": "public"
