配置打包前准备

--- a/formily/antd/package.json
+++ b/formily/antd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edan/designable-formily-antd",
-  "version": "0.0.2",
+  "version": "0.0.0",
   "license": "MIT",
   "main": "lib",
   "module": "esm",
@@ -21,7 +21,7 @@
     "preview:playground": "vite preview --host --config playground/vite.config.ts"
   },
   "devDependencies": {
-    "@edan/designable-react-settings-form": "workspace:0.0.2",
+    "@edan/designable-react-settings-form": "0.0.0",
     "@formily/antd": "3.0.0-alpha.1",
     "@formily/core": "^2.2.14",
     "@formily/json-schema": "^2.2.14",
@@ -36,7 +36,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-is": "^17.0.3",
-    "@vitejs/plugin-basic-ssl": "^0.0.0",
+    "@vitejs/plugin-basic-ssl": "^0.1.2",
     "@vitejs/plugin-react": "^2.2.0",
     "less": "^3.13.1",
     "react-error-boundary": "^3.1.4",
@@ -59,10 +59,10 @@
     "react-is": "^18.0.0"
   },
   "dependencies": {
-    "@edan/designable-core": "workspace:0.0.2",
-    "@edan/designable-formily-setters": "workspace:0.0.2",
-    "@edan/designable-formily-transformer": "workspace:0.0.2",
-    "@edan/designable-react": "workspace:0.0.2",
+    "@edan/designable-core": "0.0.0",
+    "@edan/designable-formily-setters": "0.0.0",
+    "@edan/designable-formily-transformer": "0.0.0",
+    "@edan/designable-react": "0.0.0",
     "antd": "^5.0.5",
     "classnames": "^2.3.2",
     "events": "^3.3.0",
