--- a/formily/transformer/package.json
+++ b/formily/transformer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edan/designable-formily-transformer",
-  "version": "0.0.2",
+  "version": "0.0.0",
   "license": "MIT",
   "main": "lib",
   "engines": {
@@ -33,8 +33,8 @@
     "@formily/json-schema": "^2.2.14"
   },
   "dependencies": {
-    "@edan/designable-core": "workspace:0.0.2",
-    "@edan/designable-shared": "workspace:0.0.2",
+    "@edan/designable-core": "0.0.0",
+    "@edan/designable-shared": "0.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4"
   }
