--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edan/designable-core",
-  "version": "0.0.2",
+  "version": "0.0.0",
   "license": "MIT",
   "main": "lib",
   "types": "lib/index.d.ts",
@@ -27,7 +27,7 @@
     "@formily/path": "^2.2.14"
   },
   "dependencies": {
-    "@edan/designable-shared": "workspace:0.0.2",
+    "@edan/designable-shared": "0.0.0",
     "@formily/reactive": "^2.2.14",
     "@juggle/resize-observer": "^3.4.0",
     "lodash": "^4.17.21",
@@ -39,5 +39,14 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "description": "> TODO: description",
+  "author": "zhangrui <395985079@qq.com>",
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
+  },
+  "files": [
+    "lib"
+  ]
 }
