--- a/packages/react-sandbox/package.json
+++ b/packages/react-sandbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edan/designable-react-sandbox",
-  "version": "0.0.2",
+  "version": "0.0.0",
   "license": "MIT",
   "main": "lib",
   "types": "lib/index.d.ts",
@@ -23,8 +23,8 @@
     "react-dom": "^18.0.0"
   },
   "dependencies": {
-    "@edan/designable-react": "workspace:0.0.2",
-    "@edan/designable-shared": "workspace:0.0.2",
+    "@edan/designable-react": "0.0.0",
+    "@edan/designable-shared": "0.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -36,5 +36,14 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "description": "> TODO: description",
+  "author": "zhangrui <395985079@qq.com>",
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
+  },
+  "files": [
+    "lib"
+  ]
 }
