--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,7 +27,7 @@
     "@formily/path": "^2.2.14"
   },
   "dependencies": {
-    "@edan/designable-shared": "^0.0.1",
+    "@edan/designable-shared": "0.0.0",
     "@formily/reactive": "^2.2.14",
     "@juggle/resize-observer": "^3.4.0",
     "lodash": "^4.17.21",
