--- a/formily/transformer/package.json
+++ b/formily/transformer/package.json
@@ -37,5 +37,6 @@
     "@edan/designable-shared": "^0.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4"
-  }
+  },
+  "gitHead": "27b7922701e045441a1c02b9addab0cab12617fb"
 }
