fix: 修复打包问题
# 0.0.1

- init
- 实现基本功能
- 实现基本的事件
- 实现基本的样式
- 实现基本的布局
- 实现基本的动画
- 实现基本的组件
- 实现基本的指令
- 实现基本的服务
- 实现基本的管道
- 实现基本的全局配置

--- a/.npmrc
+++ b/.npmrc
@@ -2,4 +2,4 @@
 # auto-install-peers=true
 registry=https://registry.npmjs.com/
 strict-peer-dependencies=false
-always-auth = false
+//registry.npmjs.org/:_authToken=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
