chore(release): publish

--- a/formily/setters/package.json
+++ b/formily/setters/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edan-cli/designable-formily-setters",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "main": "lib",
   "module": "esm",
@@ -45,11 +45,11 @@
     "react-is": "^18.0.0"
   },
   "dependencies": {
-    "@edan-cli/designable-core": "0.0.0",
-    "@edan-cli/designable-formily-transformer": "0.0.0",
-    "@edan-cli/designable-react": "0.0.0",
-    "@edan-cli/designable-react-settings-form": "0.0.0",
-    "@edan-cli/designable-shared": "0.0.0",
+    "@edan-cli/designable-core": "^0.0.1",
+    "@edan-cli/designable-formily-transformer": "^0.0.1",
+    "@edan-cli/designable-react": "^0.0.1",
+    "@edan-cli/designable-react-settings-form": "^0.0.1",
+    "@edan-cli/designable-shared": "^0.0.1",
     "@formily/json-schema": "^2.2.14",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
