--- a/packages/react-settings-form/package.json
+++ b/packages/react-settings-form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edan-cli/designable-react-settings-form",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "main": "lib",
   "types": "lib/index.d.ts",
@@ -37,9 +37,9 @@
   },
   "dependencies": {
     "@babel/parser": "^7.20.5",
-    "@edan-cli/designable-core": "0.0.0",
-    "@edan-cli/designable-react": "0.0.0",
-    "@edan-cli/designable-shared": "0.0.0",
+    "@edan-cli/designable-core": "^0.0.1",
+    "@edan-cli/designable-react": "^0.0.1",
+    "@edan-cli/designable-shared": "^0.0.1",
     "@formily/antd": "3.0.0-alpha.1",
     "@formily/core": "^2.2.14",
     "@formily/grid": "^2.2.14",
