--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edan-cli/designable-react",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "main": "lib",
   "types": "lib/index.d.ts",
@@ -30,8 +30,8 @@
     "@formily/reactive-react": "^2.2.14"
   },
   "dependencies": {
-    "@edan-cli/designable-core": "0.0.0",
-    "@edan-cli/designable-shared": "0.0.0",
+    "@edan-cli/designable-core": "^0.0.1",
+    "@edan-cli/designable-shared": "^0.0.1",
     "antd": "^5.0.5",
     "classnames": "^2.3.2",
     "dateformat": "^4.6.3",
